# EvenOdd

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile.sh  correct_and_time.sh  decoding.cpp  decoding.h  decoding_test.sh  encoding.cpp  encoding.h  evenodd  evenodd.c  evenodd.cpp  gendata.sh  log.cpp  log.h  my_compile.sh  pre.sh  repair.cpp  repair.h  run.sh  run_repair.sh  time_check.cpp  作品原创性声明.docx
data/: temp  temp.txt
doc/: evenodd_spec.docx
src/: decoding.cpp  decoding.h  encoding.cpp  encoding.h  evenodd.cpp  repair.cpp  time_check.cpp
test/: buffer_plot.py  buffer_size_test.sh  decode_test.sh  decoding_plot.py  dif.sh  encode_test.sh  gendata.cpp  perf.sh  run.sh  test.sh  write_plot.py
util/: ThreadPool.h  log.cpp  log.h  util.h
wxr_script/: run.sh  run_repair.sh
wyn/: gendata  gendata.cpp  my_run.sh  run.sh
wyn_correct/: correct.sh  gendata.sh  run.sh
wyn_time/: gendata.sh  logs.txt  run.sh  sum_time  sum_time.cpp  wyk_run.sh
